deployment-automation/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    repo-tag: #{tag}#
  labels:
    deploy: "#{deploy.frontend}#"
  name: #{docker.frontend}#
  namespace: #{namespace}#
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: #{docker.frontend}#
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    repo-tag: #{tag}#
  labels:
    deploy: "#{deploy.frontend}#"
  name: #{docker.frontend}#
  namespace: #{namespace}#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #{docker.frontend}#
  template:
    metadata:
      annotations:
        repo-tag: #{tag}#
      labels:
        app: #{docker.frontend}#
    spec:
      containers:
      - image: docker.io/#{docker.username}#/#{docker.frontend}#:#{tag}#
        imagePullPolicy: Always
        name: #{docker.frontend}#
        resources:
          requests:
            cpu: "100m"
            memory: "150Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
      imagePullSecrets:
        - name: pullsecret
