deployment-automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  namespace: #{namespace}#
  labels:
    deploy: "yes"
  annotations:
    repo-tag: #{tag}#
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /#{docker.repo1}#
            pathType: Prefix
            backend:
              service:
                name: #{docker.repo1}#
                port:
                  number: 80          
          - path: /#{docker.repo2}#
            pathType: Prefix
            backend:
              service:
                name: #{docker.repo2}#
                port:
                  number: 80
